<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/str_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/categoriesFragment"
        android:icon="@drawable/ic_format_list"
        android:title="@string/str_categories"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/savedFragment"
        android:icon="@drawable/ic_favorite"
        android:title="@string/str_saved"
        app:showAsAction="always" />
    <item
        android:id="@+id/serachFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/str_search"
        app:showAsAction="always" />
</menu>