<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="registration"
            type="com.imutable.coding.placeur.viewmodel.UserViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingBottom="@dimen/dimen_sp_16"
            tools:context=".view.user.SignUpActivity">

            <TextView
                android:id="@+id/signup_create_account_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_32"
                android:text="@string/str_signup_create_new_account"
                android:textColor="@color/primaryColor"
                android:textSize="@dimen/dimen_sp_32"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Full name -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_textInputLayout_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_32"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_create_account_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_textInputEditText_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={registration.user.username}"
                    android:hint="@string/str_signup_full_name"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Phone number -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_textInputLayout_phone_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_textInputLayout_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_textInputEditText_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={registration.user.mobile}"
                    android:hint="@string/str_signup_phone_number"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Email ID -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_textInputLayout_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_textInputLayout_phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_textInputEditText_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={registration.user.email}"
                    android:hint="@string/str_signup_email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_textInputLayout_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_textInputLayout_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_textInputEditText_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={registration.user.password}"
                    android:hint="@string/str_signup_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Confirm Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_textInputLayout_confirm_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_textInputLayout_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_textInputEditText_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_signup_confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Signup button -->
            <Button
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_32"
                android:padding="@dimen/dimen_16"
                android:text="@string/str_signup_button"
                android:textSize="@dimen/dimen_sp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_textInputLayout_confirm_password" />

            <!-- Sign in text -->
            <TextView
                android:id="@+id/signup_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                android:text="@string/str_signup_sign_in"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintTop_toBottomOf="@+id/signup_button"
                tools:layout_editor_absoluteX="16dp" />

            <ProgressBar
                android:id="@+id/signup_progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>