<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="@dimen/dimen_32"
            android:paddingBottom="@dimen/dimen_sp_16"
            android:fitsSystemWindows="true"
            tools:context=".view.user.LoginActivity">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.35" />

            <!-- App logo -->
            <ImageView
                android:id="@+id/login_icon"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:elevation="@dimen/dimen_4"
                android:contentDescription="@string/str_Login_app_logo"
                android:src="@drawable/login_logo"
                app:layout_constraintBottom_toTopOf="@+id/guideline35"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Username -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_textInputLayout_userId"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline35"
                app:startIconDrawable="@drawable/account_circle_outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_textInputEditText_userId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_username" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_textInputLayout_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_textInputLayout_userId"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_outline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_textInputEditText_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Login button -->
            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_32"
                android:padding="@dimen/dimen_16"
                android:text="@string/str_login_button"
                android:textSize="@dimen/dimen_sp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_textInputLayout_password" />

            <!--        <TextView-->
            <!--            android:id="@+id/textView"-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_marginTop="@dimen/dimen_16"-->
            <!--            android:text="@string/str_login_or"-->
            <!--            app:layout_constraintEnd_toEndOf="parent"-->
            <!--            app:layout_constraintStart_toStartOf="parent"-->
            <!--            app:layout_constraintTop_toBottomOf="@+id/login_button" />-->

            <!--        &lt;!&ndash; Sign in with google button &ndash;&gt;-->
            <!--        <com.google.android.gms.common.SignInButton-->
            <!--            android:id="@+id/login_google_button"-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_marginHorizontal="@dimen/dimen_16"-->
            <!--            android:layout_marginTop="@dimen/dimen_16"-->
            <!--            android:textSize="18sp"-->
            <!--            app:layout_constraintEnd_toEndOf="parent"-->
            <!--            app:layout_constraintStart_toStartOf="parent"-->
            <!--            app:layout_constraintTop_toBottomOf="@+id/textView" />-->

            <!-- Sign up text -->
            <TextView
                android:id="@+id/login_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                android:text="@string/str_login_sign_up"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintTop_toBottomOf="@+id/login_button"
                tools:layout_editor_absoluteX="16dp" />

            <ProgressBar
                android:id="@+id/login_progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>